--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "express": "^4.14.0",
     "knex": "^0.11.9",
     "lodash": "^4.14.1",
-    "method-override": "^2.3.6",
     "morgan": "^1.7.0",
     "pg": "^6.0.3",
     "react": "^15.3.0",
@@ -39,6 +38,7 @@
     "clean-webpack-plugin": "^0.1.10",
     "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.22.0",
+    "locus": "^1.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
