--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "react-dom": "^15.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.13.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "clean-webpack-plugin": "^0.1.10",
     "css-loader": "^0.23.1",
+    "dotenv": "^2.0.0",
     "html-webpack-plugin": "^2.22.0",
     "locus": "^1.2.0",
     "style-loader": "^0.13.1",
