--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "clean-webpack-plugin": "^0.1.10",
     "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "locus": "^1.2.0",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
