--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/app.js",
-    "build": "webpack"
+    "dev": "nodemon --exec babel-node ./server/app.js",
+    "build": "babel ./server --out-dir ./dist/server",
+    "//": "Alternative to using && in the start command, you can use prestart, which always runs before start",
+    "//": "npm start will be used in production",
+    "start": "npm run build && node ./dist/server/app.js"
   },
   "repository": {
     "type": "git",
@@ -33,23 +36,25 @@
     "react-router": "^2.6.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.11.4",
     "babel-core": "^6.13.1",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-2": "^6.13.0",
     "clean-webpack-plugin": "^0.1.10",
     "css-loader": "^0.23.1",
-    "dotenv": "^2.0.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "locus": "^1.2.0",
     "node-sass": "^3.8.0",
+    "nodemon": "^1.10.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1",
     "webpack-validator": "^2.2.7"
