--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "presets": ['es2015', 'stage-2', 'react', 'react-hmre']
+  "presets": ['es2015', 'react', 'stage-2'],
+  "env": {
+    "development": {
+      "presets": ["react-hmre"]
+    }
+  }
 }
