--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node ./server/app.js",
+    "dev": "nodemon --ignore client --exec babel-node ./server/app.js",
     "debug": "babel-node-debug ./server/app.js",
     "build": "babel ./server --out-dir ./dist/server",
     "//": "npm start will be used in production",
