adding user components

--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "pg": "^6.0.3",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-router": "^2.6.1"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
+    "redux": "^3.5.2",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -52,6 +55,7 @@
     "locus": "^1.2.0",
     "node-sass": "^3.8.0",
     "nodemon": "^1.10.0",
+    "redux-logger": "^2.6.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
