--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "dependencies": {
     "axios": "^0.13.1",
     "body-parser": "^1.15.2",
-    "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "knex": "^0.11.9",
     "lodash": "^4.14.1",
@@ -36,7 +35,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "redux": "^3.5.2",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "spectre.css": "^0.1.25"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
